@@ -14,6 +14,7 @@ buildscript {
 
 apply plugin: "twirl"
 apply plugin: "scala"
+apply plugin: "java"
 apply plugin: "war"
 apply plugin: "application"
 apply plugin: 'org.flywaydb.flyway'
@@ -27,14 +28,12 @@ repositories {
 }
 
 dependencies {
-  compile 'org.scalaz:scalaz-core_2.11:7.1.5'
   compile 'org.scala-lang:scala-library:2.11.6'
   compile 'org.scala-lang:scala-xml:2.11.0-M4'
   compile 'com.typesafe.play:twirl-api_2.11:1.0.2'
   compile group: 'com.typesafe.akka', name: 'akka-actor_2.11', version: '2.3.6'
   compile group: 'org.scalatra', name: 'scalatra_2.11', version: '2.3.0'
-  compile group: 'org.scalatra', name: 'scalatra-scalate_2.11', version: '2.3.1'
-  compile group: 'org.eclipse.jetty', name: 'jetty-webapp', version: '9.3.5.v20151012'
+  compile 'org.eclipse.jetty:jetty-webapp:8.1.18.v20150929'
   compile group: 'com.typesafe.scala-logging', name: 'scala-logging-slf4j_2.11', version: '2.1.2'
 
   compile 'io.github.gitbucket:markedj:1.0.3'
@@ -57,9 +56,21 @@ dependencies {
   testCompile group: 'org.scalatra', name: 'scalatra-scalatest_2.11', version: '2.3.1'
 }
 
+targetCompatibility = '1.7'
+
 defaultTasks 'compileScala'
 
 mainClassName = 'JettyLauncher'
+
+compileScala {
+    scalaCompileOptions.fork = true
+    scalaCompileOptions.forkOptions.jvmArgs = ['-XX:MaxPermSize=512m']
+    scalaCompileOptions.additionalParameters = [
+        "-feature",
+        "-language:reflectiveCalls", // used for config structural typing
+        "-language:postfixOps"
+    ]
+}
 
 twirl {
   imports = [
